styles/style.css
/* ... */
.decorated-light-stats::before {
  content: "";
  position: absolute;
  top: calc(0 * var(--tear-height) - 1px);
  left: 0;
  width: 100%;
  height: var(--tear-height);
  background: url("../assets/images/border-light-stats.png") center top / cover
    no-repeat;
  pointer-events: none;
}

.decorated-light-cta::before {
  content: "";
  position: absolute;
  top: calc(-1 * var(--tear-height) + 2px);
  left: 0;
  width: 100%;
  height: var(--tear-height);
  background: url("../assets/images/border-light-cta.png") center top / cover
    no-repeat;
  pointer-events: none;
}

/* Header */
header {
  position: fixed;
  top: 0; 
  left: 0; 
  right: 0;
  z-index: 200; 
  height: 114px;
  background: var(--color-header-footer-bg);
}

.header__wrapper {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  flex-shrink: 0;
}

.header-menu{
  display: flex;
  align-items: center;
  gap: 35px;
}

nav a {
  text-decoration: none;
  color: var(--color-bg);
  font-size: 16px;
  line-height: 21px;
  font-family: var(--second-family);
  letter-spacing: -0.56px;
  text-transform: uppercase;
  transition: color 0.22s;
  white-space: nowrap;
  position: relative;
}

nav a::after {
  content: '';
  position: absolute;
  bottom: -4px; left: 0; right: 0;
  height: 1px;
  background: var(--color-orange);
  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.22s;
}

nav a:hover { 
  color: var(--color-white); 
}
nav a:hover::after { 
  transform: scaleX(1); 
}

.btn-book {
  flex-shrink: 0;
  display: inline-flex;
  align-items: center;
  gap: 4px;
  padding: 8px 24px;
  border: 1px solid var(--color-bg);
  border-radius: 48px;
  background: transparent;
  color: var(--color-white);
  font-family: var(--font-family);
  font-size: 18px;
  line-height: 30px;
  text-decoration: none;
  cursor: pointer;
  transition: background 0.22s, border-color 0.22s;
}

.btn-book:hover {
  background: var(--color-orange);
  border-color: var(--color-orange);
}


/* Секция Hero */
.hero {
  height: 100vh;
  padding-top: 114px;
  padding-bottom: 40px;
  background: var(--color-header-footer-bg);
}

.hero__wrapper {
  height: 100%;
  position: relative;
  display: grid;
  grid-template-columns: 42% 58%;
  overflow: hidden;
}

.hero__wrapper::before {
  content: '';
  position: absolute;
  inset: 0;
  pointer-events: none;
  z-index: 0;
  background: linear-gradient(90deg, #191A18 0%, rgba(25, 26, 24, 0.5) 16%, rgba(25, 26, 24, 0) 31%);
}

.hero__wrapper::after {
  content: '';
  position: absolute;
  inset: 0;
  pointer-events: none;
  z-index: 0;
}

.hero-left {
  padding-top: 36px;
  position: relative;
  z-index: 2;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.hero-title {
  font-family: var(--font3);
  font-size: clamp(48px, 5vw, 80px);
  line-height: 1.0;
  letter-spacing: 0.01em;
  text-transform: uppercase;
  color: var(--color-white);
  margin-bottom: 40px;
}

.hero-tagline {
  display: flex;
  align-items: baseline;
  gap: 10px;
  margin-bottom: 46px;

}

.hero-tagline span {
  font-family: var(--font3);
  font-size: 40px;
  text-transform: uppercase;
  line-height: 1.125;
  letter-spacing: 5%;
}

.tagline-crack {
  color: var(--color-orange);
}

.tagline-rest {
  color: var(--color-white);
}

.hero-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
  margin-bottom: 0;
  margin-top: auto;
}

.hero-card {
  position: relative;
  height: 90px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 30px 22px;
  background: var(--color-bg);
  color: var(--color-text);
  text-decoration: none;
  font-family: var(--font-family);
  font-size: 20px;
  font-weight: 700;
  letter-spacing: 3px;
  cursor: pointer;
  transition: background 0.22s, border-color 0.22s, transform 0.18s;
  backdrop-filter: blur(4px);
}

.hero-card::after {
  content: "";
  position: absolute;
  top: 0;
  left: 5px;
  right: 5px;
  bottom: 5px;

  border-left: 1px solid var(--color-orange);
  border-right: 1px solid var(--color-orange);
  border-bottom: 1px solid var(--color-orange);

  pointer-events: none;
}

.hero-card:hover {
  transform: translateY(-1px);
}

.hero-card strong {
  color: var(--color-orange);
  font-weight: 700;
  margin-right: 2px;
}

.hero-card-arrow {
  position: absolute;
  color: var(--color-orange);
  font-size: 16px;
  transition: transform 0.18s;
  flex-shrink: 0;
  bottom: 10px;
  right: 10px;
}

.hero-card:hover .hero-card-arrow { 
  transform: translateX(4px); 
}

.hero-right {
  position: relative;
  z-index: 1;
  overflow: hidden;
}

.hero-right::before {
  content: '';
  position: absolute;
  top: 0; left: 0;
  width: 180px; height: 100%;
  background: linear-gradient(90deg, var(--color-header-footer-bg) 0%, transparent 100%);
  z-index: 5;
  pointer-events: none;
}

.hero-slider__wrapper {
  position: relative;
  width: 100%;
  height: 100%;
  min-height: calc(100vh - 68px);
}

.hero-slide {
  position: absolute;
  inset: 0;
  opacity: 0;
  transition: opacity 1s ease-in-out;
  background-size: cover;
  background-position: center top;
  will-change: opacity;
}

.hero-slide.active { opacity: 1; }

.hero-slide::after {
  content: '';
  position: absolute;
  inset: 0;
  background: rgba(15,4,2,0.15);
}

.s1 { 
  background-image: url('../assets/images/main/hero.webp'); 
}
.s2 { 
  background-image: url('../assets/images/main/hero-2.jpg'); 
}
.s3 { 
  background-image: url('../assets/images/main/hero-3.jpg'); 
}
.s4 { 
  background-image: url('../assets/images/main/hero-4.jpg'); 
}

.hero-slider-dots {
  position: absolute;
  bottom: 110px;
  right: 28px;
  z-index: 10;
  display: flex;
  flex-direction: column;
  gap: 7px;
}

.hero-dot {
  width: 5px; height: 5px;
  border-radius: 50%;
  background: rgba(245,240,230,0.28);
  cursor: pointer;
  transition: background 0.3s, transform 0.3s;
}

.hero-dot.active {
  background: var(--color-orange);
  transform: scale(1.55);
}
/* ... */

